objects/Account_Team__c.object
<CustomObject>
    <description>Custom Assignment fields that could not be added to Account Team.</description>
    <fields>
        <fullName>AB_Number__c</fullName>
        <description>AB Number from Sales Assignment hierarchy.</description>
        <label>AB Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Users for Account Team association.</description>
        <label>Account Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Acct_Team_Additional_Assignment_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account to which the Additional Account Team information is related.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Acct_Team_Additional_Assignment_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Checksum__c</fullName>
        <description>For use with JDE Integration only.</description>
        <label>Checksum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Key_JDE__c</fullName>
        <description>External JDE ID.</description>
        <externalId>true</externalId>
        <label>Composite Key JDE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Split__c</fullName>
        <description>Percentage Split from Sales Assignment hierarchy.</description>
        <label>Percentage Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_District__c</fullName>
        <formula>TEXT(Account_Team_Member__r.Sales_District__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Division__c</fullName>
        <formula>TEXT(  Account_Team_Member__r.Sales_Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>TEXT(  Account_Team_Member__r.Sales_Region__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <formula>Text(  Account_Team_Member__r.Sales_Territory__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <description>Assignment Type from Sales Assignment hierarchy.</description>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DDS DDM</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>Level 1 -Assignment by SBO</fullName>
                </value>
                <value>
                    <fullName>Level 2 -Assignment by ASM</fullName>
                </value>
                <value>
                    <fullName>Level 3 -Assign by SalesPerson</fullName>
                </value>
                <value>
                    <fullName>Sales Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserDefined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify user created Account Team Member. Used for ETL process.</description>
        <inlineHelpText>Flag to identify user created Account Team Member. Used for ETL process.</inlineHelpText>
        <label>UserDefined</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Team (Custom)</label>
    <nameField>
        <displayFormat>AT-{00000}</displayFormat>
        <label>Account Team ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>